previous ver not showing images. repaired full-page class

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -190,5 +190,9 @@ body {
 }
 
 
-
-/* IMG STYLING */ 
+.img-fullpage {
+  width:100%;
+  height:100%;
+  background-position: center;
+  background-size: contain;
+}
