--- a/client/css/right.css
+++ b/client/css/right.css
@@ -31,11 +31,3 @@
   font-size: x-small;
   padding: 15px;
 }
-
-.img-fullpage {
-  width:100%;
-  height:100%;
-  background-position: center;
-  background-size: contain;
-}
-
